Fix 'Gotcha': prevent display overflow

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     border: 1px solid lightgrey;
 }
 .calcBody {
-    width: 350px;
+    width: 450px;
     height: 500px;
     padding: 30px;
     border: 2px solid;
@@ -31,7 +31,7 @@ body {
 }
 .op-container {
     border: 1px solid lightgrey;
-    flex-basis: 10%;
+    flex-basis: 8%;
 }
 .op-container .op-readout {
     padding: 0;
@@ -39,7 +39,7 @@ body {
     width: 24px;
     height: 28px;
     font-family: 'Courier New', Courier, monospace;
-    font-size: 18pt;
+    font-size: 32pt;
     display: flex;
     justify-content: center;
 }
@@ -50,7 +50,7 @@ body {
     height: 75px;
     border: 1px solid lightgrey;
     text-align: right;
-    flex-basis: 90%;
+    flex-basis: 92%;
 }
 .btnContainer {
     border:2px solid orangered;
